# SDLOpencvCmake

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.c  opencv_camera_test.cpp
app/src/main/java/org/libsdl/app/: MainActivity.java
app/src/main/res/layout/: activity_test.xml
app/src/main/res/xml/: provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
